Paging, Single Image

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<link rel="shortcut icon" href="assets/img/favicon.png">
 	<title>CoreUI - Open Source Bootstrap Admin Template</title>
 </head>
-<body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+<body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden footer-fixed">
   <!-- Enable bootstrap 4 theme -->
   <script>window.__theme = 'bs4';</script>
 
